# RopeEngineReNg

./: CMakeLists.txt  CMakePresets.json  README.md
include/: shapes.h
src/: main.cpp  shapes.cpp
